--- a/package.json
+++ b/package.json
@@ -1,11 +1,27 @@
 {
-  "name": "webhook",
+  "name": "hexagamechangersbot",
   "version": "1.0.0",
-  "description": "Web hook for Sample",
+  "description": "A bot for game changers1",
+  "repository": "https://github.com/ramukhsakarp/hexagamechangers.git",
   "main": "index.js",
   "scripts": {
+    "start": "node index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "keywords": [
+    "news",
+    "api",
+    "SiddAjmera",
+    "Chatfuel",
+    "facebook",
+    "Facebook",
+    "Messenger",
+    "Messenger"
+  ],
+  "author": "HexaGameChangers",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "express": "^4.16.3"
+  }
 }
